Pico css eklendi

--- a/index.html
+++ b/index.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Onur IŞIK</title>
-</head>
-<body>
-  
-  <h1>Onur IŞIK</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css"
+    />
+    <title>Onur IŞIK</title>
+  </head>
+  <body>
+    <nav>
+      <ul>
+        <li><strong>Onur IŞIK</strong></li>
+      </ul>
+      <ul>
+        <li><a href="#">Anasayfa</a></li>
+        <li><a href="#">Portfolio</a></li>
+        <li><a href="#" role="button">İletişim</a></li>
+      </ul>
+    </nav>
+  </body>
 </html>
