--- a/index.html
+++ b/index.html
@@ -10,15 +10,17 @@
     <title>Onur IŞIK</title>
   </head>
   <body>
-    <nav>
-      <ul>
-        <li><strong>Onur IŞIK</strong></li>
-      </ul>
-      <ul>
-        <li><a href="#">Anasayfa</a></li>
-        <li><a href="#">Portfolio</a></li>
-        <li><a href="#" role="button">İletişim</a></li>
-      </ul>
-    </nav>
+    <main class="container">
+      <nav>
+        <ul>
+          <li><strong>Onur IŞIK</strong></li>
+        </ul>
+        <ul>
+          <li><a href="#">Anasayfa</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#" role="button">İletişim</a></li>
+        </ul>
+      </nav>
+    </main>
   </body>
 </html>
